--- a/devportfolio-master/css/styles.css
+++ b/devportfolio-master/css/styles.css
@@ -1,47 +1,14 @@
 body {
     font-family: 'Helvetica';
-    font-size: 18px;
-    background-color: #F4EBD0;
-    font-weight: bold
+    font-size: 15px;
+    background-color: #e3ddd4;
+    color: #062439
 }
 
 body.active {
     overflow: hidden;
     z-index: -1
 }
-
-/*.no-js #experience-timeline>div {
-    background: #F4EBD0;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #062439
-}
-
-.no-js #experience-timeline>div h3 {
-    font-size: 1.5em;
-    font-weight: 300;
-    color: #062439;
-    display: inline-block;
-    margin: 0
-}
-
-.no-js #experience-timeline>div h4 {
-    font-size: 1.2em;
-    font-weight: 300;
-    color: #062439;
-    margin: 0 0 15px 0
-}
-
-.no-js #experience-timeline>div p {
-    color: #062439;
-    font-size: 0.9em;
-    margin: 0
-}
-
-.no-js #experience-timeline:before,
-.no-js #experience-timeline:after {
-    content: none
-}*/
 
 @keyframes dropHeader {
     0% {
@@ -80,7 +47,7 @@ header {
 
 header ul {
     display: inline-block;
-    /*background: #F4EBD0;*/
+    /*background: #e3ddd4;*/
     text-align: center;
     padding: 10px;
     margin: 0;
@@ -94,20 +61,20 @@ header li {
 
 header a {
     display: block;
-    color: #F4EBD0;
+    color: #e3ddd4;
     padding: 10px
 }
 
 header a:hover{
+    background-color: #e3ddd4;
     color: #062439;
-    background: #F4EBD0;
     text-decoration: none;
     border-radius: 4px;
 }
 
 header a:focus {
     color: #062439;
-    background: #F4EBD0;
+    background: #e3ddd4;
     text-decoration: none;
     border-radius: 4px;
 }
@@ -136,14 +103,14 @@ header.sticky {
     z-index: 20;
     padding: 0 7px;
     border-radius: 4px;
-    background: #F4EBD0
+    background: #e3ddd4
 }
 
 #mobile-menu-close {
     display: none;
     text-align: right;
     width: 100%;
-    background: #F4EBD0;
+    background: #e3ddd4;
     font-size: 1.5em;
     padding-right: 15px;
     padding-top: 10px;
@@ -165,12 +132,14 @@ footer {
 }
 
 .copyright {
-    padding-top: 20px
+    padding-top: 20px;
+    font-size: 10px
 }
 
 .copyright p {
     margin: 0;
-    color: #062439
+    color: #062439;
+    font-size: 10px
 }
 
 .top {
@@ -214,38 +183,45 @@ footer {
 }
 
 .social a:hover {
-    color: #062439
+    background-color: #062439;
+    color: #e3ddd4;
 }
 
 .btn-rounded-white {
     display: inline-block;
-    color: #F4EBD0;
-    padding: 15px 25px;
-    border: 3px solid #F4EBD0;
+    color: #e3ddd4;
+    padding: 20px 50px;
+    border: 3px solid #e3ddd4;
     border-radius: 3px;
     transition: .5s ease all;
+    font-size: 1.1em;
 }
 
 .btn-rounded-white:hover {
+    background-color: #e3ddd4;
     color: #062439;
-    background: #F4EBD0;
-    text-decoration: none
+    text-decoration: none;
+    font-size: 1.1em;
 }
 
-.heading {
+.heading-fixed {
     position: relative;
     display: inline-block;
-    font-size: 3em;
-    font-weight: 300;
+    font-size: 2em;
+    font-weight: 400;
     margin: 0 0 30px 0;
     color: #062439;
-    /*border-bottom: 3px solid #333;*/
     margin-bottom: -5px;
     padding-bottom: -5px;
-    font-weight: bold
+    font-weight: bold;
+    text-align: center;
 }
 
-.heading:after {
+.heading-fixed:hover {
+    font-size: 2.5em; /* Increase font-size on hover */
+}
+
+.heading-fixed:after {
     position: absolute;
     content: '';
     top: 100%;
@@ -254,8 +230,9 @@ footer {
     left: 0;
     right: 0;
     margin: 0 auto;
-    font-weight: bold
-    /*background: #F4EBD0*/
+    font-weight: bold;
+    text-align: center;
+    /*background: #e3ddd4*/
 }
 
 #lead {
@@ -270,7 +247,7 @@ footer {
 }
 
 #lead-content {
-    color: #F4EBD0;
+    color: #e3ddd4;
     position: absolute;
     z-index: 10;
     top: 50%; /* Adjust the Button location */
@@ -285,18 +262,18 @@ footer {
 }
 
 #lead-content h1 {
-    color: #F4EBD0;
+    color: #e3ddd4;
     font-weight: 900;
-    font-size: 5em;
+    font-size: 3em;
     text-transform: uppercase;
     letter-spacing: 0.05em;
     line-height: 0.9em
 }
 
 #lead-content h2 {
-    color: #F4EBD0;
+    color: #e3ddd4;
     font-weight: 500;
-    font-size: 2.25em;
+    font-size: 2em;
     margin-bottom: 15px
 }
 
@@ -325,7 +302,7 @@ footer {
     text-align: center;
     z-index: 10;
     bottom: 15px;
-    color: #F4EBD0
+    color: #e3ddd4
 }
 
 #lead-down span {
@@ -360,7 +337,7 @@ footer {
 }
 
 #about {
-    padding: 400px 50px;
+    padding: 200px 50px;
     width: 100%;
     /*box-sizing: border-box;
     border-bottom: 1px solid #062439;*/
@@ -372,12 +349,12 @@ footer {
 
 #about p {
     color: #062439;
-    font-size: 30px;
+    font-size: 20px;
     text-align: centre;
 }
 
 #experience {
-    padding: 100px 50px;
+    padding: 200px 50px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 30px;
@@ -401,7 +378,7 @@ footer {
 }
 
 #experience p {
-    font-size: 30px;
+    font-size: 20px;
     color: #062439
 }
 
@@ -420,7 +397,7 @@ footer {
     right: auto;
     height: 100%;
     width: 3px;
-    background: #F4EBD0;
+    background: #e3ddd4;
     z-index: 0
 }
 
@@ -429,15 +406,15 @@ footer {
     content: '';
     width: 3px;
     height: 40px;
-    background: #F4EBD0;
-    background: linear-gradient(to bottom, #F4EBD0, rgba(52, 152, 219, 0));
+    background: #e3ddd4;
+    background: linear-gradient(to bottom, #e3ddd4, rgba(52, 152, 219, 0));
     top: 100%;
     left: 303px
 }
 
 .vtimeline-content {
     margin-left: 350px;
-    background: #F4EBD0;
+    background: #e3ddd4;
     /*border: 1px solid #062439;
     border-radius: 3px;*/
     padding: 15px;
@@ -468,7 +445,6 @@ footer {
 .vtimeline-point {
     position: relative;
     display: block;
-    vertical-align: top;
     margin-bottom: 30px
 }
 
@@ -477,7 +453,7 @@ footer {
     color: #062439;
     width: 50px;
     height: 50px;
-    background: #F4EBD0;
+    background: #e3ddd4;
     /*border-radius: 50%;*/
     float: left;
     z-index: 99;
@@ -501,10 +477,14 @@ footer {
 }
 
 #testimonials {
-    padding: 100px 50px;
+    text-align: center
+}
+
+#testimonials-rotate {
+    padding: 100px 100px;
     display: grid;
-    grid-template-columns: repeat(6, 25%); /* Adjust width percentage as needed */
-    gap: 30px;
+    grid-template-columns: repeat(7, 40%); /* Adjust width percentage as needed */
+    gap: 100px;
     justify-content: center;
     overflow: hidden;
     position: relative;
@@ -514,9 +494,9 @@ footer {
     position: relative;
     width: 100%;
     animation: rotateTestimonials 15s linear infinite;
-    transition: all 0.3s ease;
-    padding: 50px;
-    background-color: #f0e4c0;
+    transition: all 0.5s ease;
+    padding: 15px;
+    background-color: #dad0c3;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
 }
 
@@ -526,10 +506,10 @@ footer {
 
 @keyframes rotateTestimonials {
     0% {
-        transform: translateX(20%);
+        transform: translateX(500%);
     }
     100% {
-        transform: translateX(calc(-80% * 6)); /* Move to the right edge */
+        transform: translateX(-500%);
     }
 }
 
@@ -546,7 +526,7 @@ footer {
 
 #projects {
     padding: 50px 15px;
-    /*border-bottom: 1px solid #F4EBD0;*/
+    /*border-bottom: 1px solid #e3ddd4;*/
     text-align: center
 }
 
@@ -622,17 +602,170 @@ footer {
     margin: 7px;
     padding: 5px 10px;
     color: #062439;
-    background: #F4EBD0;
+    background: #e3ddd4;
     list-style: none;
     cursor: default;
     font-size: 1.2em
 }
 
-#contact {
-    /*padding: 50px 15px; */
-    background: #F4EBD0;
+#analysis-report {
+    padding: 100px 15px;
+    background: #e3ddd4;
     text-align: center
+
 }
+
+#analysis-report-form .file-upload-label {
+    display: block;
+    width: 100%;
+    padding: 15px;
+    border: none;
+    margin-bottom: 15px;
+    background-color: #dad0c3;
+    transition: .5s ease all;
+    font-weight: normal;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+    color: #062439;
+    text-align: center;
+    cursor: pointer;
+}
+
+#analysis-report-form .file-upload-label:hover {
+    background-color: #062439;
+    color: #e3ddd4;
+}
+
+#analysis-report-form input[type="file"] {
+    display: none;
+}
+
+#analysis-report-form .name-fields {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5px;
+}
+
+#analysis-report-form .name-fields input {
+    width: 49%; /* Adjust as needed */
+}
+
+#analysis-report h2 {
+    margin: 0 0 15px 0;
+    color: #062439;
+    font-weight: 500
+}
+
+#analysis-report p {
+    font-size: 1.2em;
+    color: #062439;
+    font-weight: 500
+}
+
+#analysis-report-form {
+    max-width: 1000px;
+    margin: 0 auto
+}
+
+#analysis-report-form input,
+#analysis-report-form textarea {
+    display: block;
+    width: 100%;
+    padding: 15px;
+    border: none;
+    margin-bottom: 15px;
+    background-color: #dad0c3;
+    transition: .5s ease all;
+    font-weight: normal;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+    color: #062439
+}
+
+#analysis-report-form input::-webkit-input-placeholder,
+#analysis-report-form textarea::-webkit-input-placeholder {
+    color: #0624393a
+}
+
+#analysis-report-form input:-moz-placeholder,
+#analysis-report-form textarea:-moz-placeholder {
+    color: #0624393a;
+    opacity: 1
+}
+
+#analysis-report-form input::-moz-placeholder,
+#analysis-report-form textarea::-moz-placeholder {
+    color: #0624393a;
+    opacity: 1
+}
+
+#analysis-report-form input:-ms-input-placeholder,
+#analysis-report-form textarea:-ms-input-placeholder {
+    color: #0624393a
+}
+
+#analysis-report-form input:focus,
+#analysis-report-form textarea:focus {
+    outline: none;
+    background: #e3ddd4
+}
+
+#analysis-report-form textarea {
+    height: 150px;
+    resize: none
+}
+
+#analysis-report-form button {
+    display: block;
+    width: 20%;
+    background: #dad0c3;
+    border-radius: 4px;
+    padding: 10px 5px;
+    border: none;
+    color: #062439;
+    font-weight: 700;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+    transition: .5s ease all
+}
+
+#analysis-report-form button:hover {
+    box-shadow: 0 10px 20px 000(0, 0, 0, 0.19), 0 6px 6px e3ddd4(0, 0, 0, 0.23);
+    background-color: #062439;
+    color: #e3ddd4;
+}
+
+#contact {
+    padding: 50px 15px;
+    background: #e3ddd4;
+    text-align: center
+
+}
+
+#contact-form .name-fields {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5px;
+}
+
+#contact-form .name-fields input {
+    width: 49%; /* Adjust as needed */
+}
+
+.input-group {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 15px;
+}
+
+.input-group select,
+.input-group input[type="date"] {
+    width:10%; /* Adjust as needed */
+}
+
+.input-group label {
+    width: 10%; /* Adjust as needed */
+    text-align: right;
+    margin-right: 10px;
+}
+
 
 #contact h2 {
     margin: 0 0 15px 0;
@@ -645,14 +778,32 @@ footer {
     margin: 0 auto
 }
 
+#contact-form select {
+    display: block;
+    width: 100%;
+    padding: 15px;
+    border: none;
+    margin-bottom: 15px;
+    background-color: #dad0c3;
+    transition: .5s ease all;
+    font-weight: normal;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+    color: #062439;
+}
+
+#contact-form select:focus {
+    outline: none;
+    background-color: #dad0c3; /* Change background color on focus */
+}
+
 #contact-form input,
 #contact-form textarea {
     display: block;
     width: 100%;
     padding: 15px;
     border: none;
-    margin-bottom: 30px;
-    background-color: #f0e4c0;
+    margin-bottom: 15px;
+    background-color: #dad0c3;
     transition: .5s ease all;
     font-weight: normal;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
@@ -684,7 +835,7 @@ footer {
 #contact-form input:focus,
 #contact-form textarea:focus {
     outline: none;
-    background: #F4EBD0
+    background: #e3ddd4
 }
 
 #contact-form textarea {
@@ -694,8 +845,8 @@ footer {
 
 #contact-form button {
     display: block;
-    width: 100%;
-    background: #f0e4c0;
+    width: 20%;
+    background: #dad0c3;
     border-radius: 4px;
     padding: 10px 5px;
     border: none;
@@ -706,7 +857,9 @@ footer {
 }
 
 #contact-form button:hover {
-    box-shadow: 0 10px 20px 000(0, 0, 0, 0.19), 0 6px 6px F4EBD0(0, 0, 0, 0.23)
+    box-shadow: 0 10px 20px 000(0, 0, 0, 0.19), 0 6px 6px e3ddd4(0, 0, 0, 0.23);
+    background-color: #062439;
+    color: #e3ddd4;
 }
 
 .optional-section {
@@ -724,7 +877,7 @@ footer {
     margin: 0 auto 30px auto;
     padding: 15px;
     /*border: 1px solid #062439;*/
-    background: #F4EBD0;
+    background: #e3ddd4;
     text-align: left
 }
 
@@ -786,7 +939,7 @@ footer {
     }
 
     #lead-content {
-        color: #F4EBD0;
+        color: #e3ddd4;
         position: relative;
         transform: none;
         left: auto;
@@ -847,7 +1000,7 @@ footer {
     }
 
     #lead-content a {
-        color: #F4EBD0;
+        color: #e3ddd4;
         padding: 10px 20px;
     }
 
@@ -891,7 +1044,7 @@ footer {
     }
 
     #lead-content a {
-        color: #F4EBD0;
+        color: #e3ddd4;
         font-size: 0.9em;
         padding: 5px 10px;
         margin-left: 100px 
