--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Helvetica';
     font-size: 18px;
     background-color: #ffffff;
-    color: #062439
+    color: #062439;
 }
 
 body.active {
@@ -37,19 +37,15 @@ header {
     right: 0;
     text-align: center;
     z-index: 1000;
-    /*animation-name: dropHeader;
-    animation-iteration-count: 1;
-    animation-timing-function: ease;
-    animation-duration: 1s;*/
     width: 100%;
-    background: #062439
+    background: #062439;
 }
 
 header ul {
     display: inline-block;
     /*background: #ffffff;*/
     text-align: center;
-    padding: 10px;
+    padding: 15px;
     margin: 0;
     border-bottom-right-radius: 4px;
     border-bottom-left-radius: 4px
@@ -66,17 +62,19 @@ header a {
 }
 
 header a:hover{
-    background-color: #ffffff;
-    color: #062439;
+    /*background-color: #ffffff;*/
+    color: #ffffff;
     text-decoration: none;
-    border-radius: 4px;
+    border-bottom: 2px solid #ff5100;
+    font-weight: bold;
+
 }
 
 header a:focus {
-    color: #062439;
-    background: #ffffff;
+    color: #ffffff;
     text-decoration: none;
-    border-radius: 4px;
+    border-bottom: 2px solid #ff5100;
+    font-weight: bold;
 }
 
 header.active {
@@ -94,7 +92,6 @@ header.sticky {
 
 #mobile-menu-open {
     display: none;
-    cursor: pointer;
     position: fixed;
     right: 15px;
     top: 10px;
@@ -103,7 +100,8 @@ header.sticky {
     z-index: 20;
     padding: 0 7px;
     border-radius: 4px;
-    background: #ffffff
+    background: #ffffff;
+    
 }
 
 #mobile-menu-close {
@@ -114,7 +112,6 @@ header.sticky {
     font-size: 1.5em;
     padding-right: 15px;
     padding-top: 10px;
-    cursor: pointer;
     color: #062439
 }
 
@@ -147,7 +144,6 @@ footer {
 }
 
 .top span {
-    cursor: pointer;
     display: block;
     margin: 15px auto 0 auto;
     width: 35px;
@@ -162,31 +158,35 @@ footer {
 }
 
 .social {
-    text-align: right
+    text-align: right;
 }
 
 .social ul {
     margin: 5px 0 0 0;
-    padding: 0
+    padding: 0;
+    display: flex; /* Use flexbox */
+    justify-content: flex-end; /* Align items to the end */
 }
 
+
 .social li {
-    display: inline-block;
     font-size: 1.25em;
-    list-style: none
+    list-style: none;
+    margin-left: 10px; /* Add some spacing between icons */
 }
 
 .social a {
     display: block;
     color: #062439;
-    padding: 10px
+    padding: 10px;
 }
 
 .social a:hover {
-    background-color: #062439;
+    background-color: #ff5100;
     color: #ffffff;
     border-radius: 25px;
 }
+
 
 .btn-rounded-white {
     display: inline-block;
@@ -217,10 +217,11 @@ footer {
     padding-bottom: -5px;
     font-weight: bold;
     text-align: center;
+    transition: 0.2s ease all;
 }
 
 .heading-fixed:hover {
-    font-size: 2.5em; /* Increase font-size on hover */
+    font-size: 2.2em; /* Increase font-size on hover */
 }
 
 .heading-fixed:after {
@@ -234,7 +235,15 @@ footer {
     margin: 0 auto;
     font-weight: bold;
     text-align: center;
-    /*background: #ffffff*/
+}
+
+@keyframes revealWave {
+    0% {
+        transform: scaleX(0);
+    }
+    100% {
+        transform: scaleX(1);
+    }
 }
 
 #lead {
@@ -247,6 +256,30 @@ footer {
     padding: 15px;
     overflow: hidden;
 }
+
+.typewriter h3 {
+    color: #ffffff;
+    overflow: hidden; /* Ensures the content is not revealed until the animation */
+    border-right: .15em solid #ff5100; /* The typwriter cursor */
+    white-space: nowrap; /* Keeps the content on a single line */
+    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+    letter-spacing: .1em; /* Adjust as needed */
+    animation: 
+      typing 3s steps(30, end),
+      blink-caret .5s step-end infinite;
+  }
+  
+  /* The typing effect */
+  @keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+  }
+  
+  /* The typewriter cursor effect */
+  @keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: #ff5100 }
+  }
 
 #lead-content {
     color: #ffffff;
@@ -298,7 +331,7 @@ footer {
     animation-name: dropHeader;
     animation-iteration-count: 1;
     animation-timing-function: ease;
-    animation-duration: 1s;
+    animation-duration: 2s;
 }
 
 #lead-down {
@@ -313,7 +346,6 @@ footer {
 }
 
 #lead-down span {
-    cursor: pointer;
     display: block;
     margin: 0 auto;
     width: 35px;
@@ -344,11 +376,18 @@ footer {
 }
 
 #why-us{
-    padding: 200px 50px;
+    background: #fafafa;
+    padding: 100px 50px;
     width: 100%;
 }
 
 #why-us h2 {
+    font-size: 100px;
+    font-weight: lighter;
+    color: #ff5100;
+}
+
+#why-us span {
     font-size: 100px;
     font-weight: lighter;
     color: #ff5100;
@@ -360,7 +399,7 @@ footer {
 }
 
 #about {
-    padding: 200px 50px;
+    padding: 100px 50px;
     width: 100%;
     /*box-sizing: border-box;
     border-bottom: 1px solid #062439;*/
@@ -401,7 +440,7 @@ footer {
 }
 
 #experience {
-    padding: 200px 50px;
+    padding: 100px 50px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 30px;
@@ -523,27 +562,31 @@ footer {
 }
 
 #testimonials {
-    text-align: center
+    text-align: left;
+    background: #fafafa;
+    padding: 100px 50px;
 }
 
 #testimonials-rotate {
-    padding: 100px 100px;
+    padding: 100px;
     display: grid;
-    grid-template-columns: repeat(7, 40%); /* Adjust width percentage as needed */
-    gap: 100px;
+    grid-template-columns: repeat(7, 35%); /* Adjust width percentage as needed */
+    gap: 1px;
     justify-content: center;
     overflow: hidden;
     position: relative;
 }
 
 #testimonials .box {
+    text-align: center;
     position: relative;
-    width: 100%;
-    animation: rotateTestimonials 30s linear infinite;
-    transition: all 0.5s ease;
-    padding: 15px;
+    width: 80%;
+    animation: rotateTestimonials 35s linear infinite;
+    transition: all 1s ease;
+    padding: 10px;
     background-color: #ffffff;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+    box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
 }
 
 #testimonials:hover .box {
@@ -650,7 +693,6 @@ footer {
     color: #062439;
     background: #ffffff;
     list-style: none;
-    cursor: default;
     font-size: 1.2em
 }
 
@@ -659,7 +701,6 @@ footer {
     position: relative;
     padding-left: 35px;
     /*margin-bottom: 12px;*/
-    cursor: pointer;
     font-size: 22px;
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -672,7 +713,6 @@ footer {
 .container input {
     position: absolute;
     opacity: 0;
-    cursor: pointer;
     height: 0;
     width: 0;
 }
@@ -709,7 +749,7 @@ footer {
 .grid-container2 {
     margin-top: 20px;
     display: grid;
-    grid-template-columns: repeat(4, 1fr); /* Three columns layout */
+    grid-template-columns: repeat(4, 1fr); /* Four columns layout */
     grid-gap: 1px;
 }
 
@@ -740,7 +780,6 @@ footer {
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
     color: #062439;
     text-align: center;
-    cursor: pointer;
 }
 
 #analysis-report-form .file-upload-label:hover {
@@ -865,10 +904,8 @@ footer {
 }
 
 #contact {
-    padding: 50px 15px;
-    background: #ffffff;
-    text-align: center
-
+    text-align: center;
+    padding: 100px 50px;
 }
 
 #contact-form .name-fields {
@@ -898,11 +935,14 @@ footer {
     margin-right: 10px;
 }
 
-
 #contact h2 {
     margin: 0 0 15px 0;
     color: #062439;
-    font-weight: 500
+    font-weight: bold;
+}
+
+#contact h3 {
+    margin: 0 0 50px 0;
 }
 
 #contact-form {
@@ -915,8 +955,6 @@ footer {
     width: 100%;
     padding: 15px;
     margin-bottom: 15px;
-    /*border: solid #062439;
-    border-width: 1px;*/
     border: none;
     border-radius: 4px;
     margin-bottom: 15px;
@@ -938,15 +976,13 @@ footer {
     width: 100%;
     padding: 15px;
     margin-bottom: 15px;
-    /*border: solid #062439;
-    border-width: 1px;*/
     border: none;
     border-radius: 4px;
     margin-bottom: 15px;
     background-color: #f3f3f3;
     transition: .5s ease all;
     font-weight: normal;
-    /*box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);*/
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
     color: #062439
 }
 
