--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,6 @@ body.active {
 
 header {
     position: fixed;
-    margin-left: 10px;
     top: 0;
     left: 0;
     right: 0;
@@ -564,7 +563,7 @@ footer {
 
 .hover-text h2 {
     text-transform: uppercase;
-    font-size: 60px;
+    font-size: 2em;
     letter-spacing: -0.05em;
     text-align: center;
     line-height: 0.5;
@@ -615,7 +614,7 @@ footer {
     overflow: hidden;
     background: #ffffff;
     line-height: 1.5;
-    font-size: 18px;
+    font-size: 1em;
     transform: scale(0);
     transition: all 0.3s;
 
@@ -736,14 +735,14 @@ footer {
 
 /* Adjust the size and color of the text */
 #testimonials p {
-    font-size: 20px;
+    font-size: 1.2em;
     /* Adjust the font size as needed */
     color: #062439;
     /* Adjust the color as needed */
 }
 
 #testimonials h2 {
-    font-size: 30px;
+    font-size: 1.8em;
     color: #ff5100
 }
 
@@ -835,7 +834,7 @@ footer {
     position: relative;
     padding-left: 35px;
     /*margin-bottom: 12px;*/
-    font-size: 22px;
+    font-size: 1.5em;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
