--- a/css/text-fadein.css
+++ b/css/text-fadein.css
@@ -13,7 +13,7 @@
 .fade-in .container {
   width: 100%;
   height: 100vh;
-  background: linear-gradient(to right, #072b44, #062439);
+  background: #062439;
 
   display: flex;
   justify-content: center;
